@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014-present Martin Paljak
+ * Copyright (c) 2014-present Martin Paljak <martin@martinpaljak.net>
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -21,42 +21,39 @@
  */
 package apdu4j.tool;
 
+import apdu4j.apdulette.Cookbook;
+import apdu4j.apdulette.SousChef;
+import apdu4j.apdulette.SpoiledIngredient;
+import apdu4j.core.APDUBIBO;
+import apdu4j.core.BIBOException;
+import apdu4j.core.HexUtils;
 import apdu4j.core.ResponseAPDU;
-import apdu4j.core.*;
 import apdu4j.pcsc.*;
-import apdu4j.pcsc.terminals.LoggingCardTerminal;
 import jnasmartcardio.Smartcardio;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import picocli.CommandLine;
 import picocli.CommandLine.*;
 
-import javax.smartcardio.*;
+import javax.smartcardio.CardException;
+import javax.smartcardio.TerminalFactory;
 import java.io.IOException;
 import java.io.PrintStream;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.Provider;
 import java.security.Security;
 import java.util.*;
 import java.util.concurrent.Callable;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ForkJoinPool;
-import java.util.stream.Collectors;
+import java.util.concurrent.atomic.AtomicInteger;
 
 @Command(name = "apdu4j", versionProvider = SCTool.class, mixinStandardHelpOptions = true, subcommands = {HelpCommand.class})
 public class SCTool implements Callable<Integer>, IVersionProvider {
-    public static final String ENV_APDU4J_APPS = "APDU4J_APPS";
     public static final String ENV_APDU4J_READER = "APDU4J_READER";
     public static final String ENV_APDU4J_READER_IGNORE = "APDU4J_READER_IGNORE";
     public static final String ENV_APDU4J_DEBUG = "APDU4J_DEBUG";
     public static final String ENV_APDU4J_DEBUG_FILE = "APDU4J_DEBUG_FILE";
     public static final String ENV_SMARTCARD_LIST = "SMARTCARD_LIST";
 
-
     final Logger logger = LoggerFactory.getLogger(SCTool.class);
-    private TerminalFactory tf = null;
     @Option(names = {"-v", "--verbose"}, description = "Be verbose")
     boolean verbose;
     @Option(names = {"-d", "--debug"}, description = "Trace APDU-s")
@@ -93,8 +90,6 @@ public class SCTool implements Callable<Integer>, IVersionProvider {
     @ArgGroup(heading = "Low level options%n", validate = false)
     LowLevel lowlevel = new LowLevel();
 
-    private Map<String, SmartCardApp> apps;
-
     private TerminalManager manager;
 
     static class LowLevel {
@@ -105,8 +100,9 @@ public class SCTool implements Callable<Integer>, IVersionProvider {
     }
 
     private void verbose(String s) {
-        if (verbose)
+        if (verbose) {
             System.out.println("# " + s);
+        }
     }
 
     void printReaderList(List<PCSCReader> readers, PrintStream to, boolean verbose) {
@@ -114,11 +110,11 @@ public class SCTool implements Callable<Integer>, IVersionProvider {
             to.println("No readers found");
             return;
         }
-        ReaderAliases aliases = ReaderAliases.getDefault().apply(readers.stream().map(PCSCReader::getName).collect(Collectors.toList()));
+        var aliases = ReaderAliases.getDefault().apply(readers.stream().map(PCSCReader::name).toList());
 
         ATRList atrList = null;
-        Optional<String> atrListPath = Optional.ofNullable(System.getenv(ENV_SMARTCARD_LIST)).or(ATRList::locate);
-        boolean hasSomeATR = readers.stream().filter(PCSCReader::isPresent).count() > 0;
+        var atrListPath = Optional.ofNullable(System.getenv(ENV_SMARTCARD_LIST)).or(ATRList::locate);
+        var hasSomeATR = readers.stream().filter(PCSCReader::present).count() > 0;
         if (atrListPath.isPresent() && hasSomeATR) {
             try {
                 atrList = ATRList.from(atrListPath.get());
@@ -126,21 +122,22 @@ public class SCTool implements Callable<Integer>, IVersionProvider {
                 logger.warn("Could not load ATR list: {}", e.getMessage(), e);
             }
         }
-        int i = 0;
+        var i = 0;
         String filler = readers.size() > 10 ? "              " : "             ";
-        if (atrList != null && verbose)
+        if (atrList != null && verbose) {
             verbose("ATR info from " + atrList.getSource().orElse("unknown source"));
+        }
         for (PCSCReader r : readers) {
             i++;
-            String vmdString = r.getVMD().map(e -> String.format("[%s] ", e)).orElse("");
-            char marker = verbose ? PCSCReader.presenceMarker(r) : (r.isPresent() ? '*' : ' ');
-            to.println(String.format("%d: [%c] %s%s", i, marker, vmdString, aliases.extended(r.getName())));
+            var vmdString = r.getVMD().map("[%s] "::formatted).orElse("");
+            char marker = verbose ? PCSCReader.presenceMarker(r) : (r.present() ? '*' : ' ');
+            to.println("%d: [%c] %s%s".formatted(i, marker, vmdString, aliases.extended(r.name())));
             if (verbose) {
                 if (r.getATR().isPresent()) {
-                    byte[] atr = r.getATR().get();
-                    to.println(String.format("%s%s", filler, HexUtils.bin2hex(atr)));
+                    var atr = r.getATR().get();
+                    to.println("%s%s".formatted(filler, HexUtils.bin2hex(atr)));
                     if (atrList != null) {
-                        Optional<Map.Entry<String, List<String>>> desc = atrList.match(atr);
+                        var desc = atrList.match(atr);
                         if (desc.isPresent()) {
                             desc.get().getValue().stream().forEachOrdered(l -> to.printf("%s- %s%n", filler, l));
                         }
@@ -155,21 +152,22 @@ public class SCTool implements Callable<Integer>, IVersionProvider {
     @Command(name = "list", description = "List available smart card readers.", aliases = {"ls"})
     public int listReaders(@Option(names = {"-v", "--verbose"}) boolean verbose) {
 
-        boolean beVerbose = this.verbose || verbose;
+        var beVerbose = this.verbose || verbose;
         if (beVerbose) {
-            List<String> env = System.getenv().entrySet().stream().filter(e -> e.getKey().startsWith("APDU4J_")).map(e -> String.format("%s=\"%s\"", e.getKey(), e.getValue())).collect(Collectors.toList());
-            if (env.size() > 0)
+            List<String> env = System.getenv().entrySet().stream().filter(e -> e.getKey().startsWith("APDU4J_")).map(e -> "%s=\"%s\"".formatted(e.getKey(), e.getValue())).toList();
+            if (!env.isEmpty()) {
                 verbose(String.join(" ", env));
+            }
         }
         try {
-            List<PCSCReader> result = TerminalManager.listPCSC(getTerminalManager().terminals().list(), debug ? System.out : null, beVerbose);
-            TerminalManager.dwimify(result, System.getenv(ENV_APDU4J_READER), System.getenv(ENV_APDU4J_READER_IGNORE));
+            var result = TerminalManager.listPCSC(getTerminalManager().terminals().list(), debug ? System.out : null, beVerbose);
+            result = Readers.dwimify(result, System.getenv(ENV_APDU4J_READER), Readers.parseIgnoreHints(System.getenv(ENV_APDU4J_READER_IGNORE)));
             printReaderList(result, System.out, beVerbose);
         } catch (Smartcardio.EstablishContextException | CardException e) {
             String em = SCard.getExceptionMessage(e);
-            if (em.equals(SCard.SCARD_E_NO_SERVICE)) {
+            if (SCard.SCARD_E_NO_SERVICE.equals(em)) {
                 return fail("PC/SC service is not running: " + em);
-            } else if (em.equals(SCard.SCARD_E_NO_READERS_AVAILABLE)) {
+            } else if (SCard.SCARD_E_NO_READERS_AVAILABLE.equals(em)) {
                 // Address Windows with SunPCSC
                 return fail("No readers found: " + em);
             } else {
@@ -179,241 +177,41 @@ public class SCTool implements Callable<Integer>, IVersionProvider {
         return 0;
     }
 
-    // Allow overriding apps folder TODO: Windows %APPDATA%?
-    static Path appsFolder = Paths.get(System.getenv().getOrDefault(ENV_APDU4J_APPS, Paths.get(System.getProperty("user.home", ""), ".apdu4j", "apps").toString()));
-
-    @Command(name = "apps", description = "List available apps.")
-    public int listApps() {
-        if (apps == null)
-            apps = resolveApps();
-
-        // Apps are instances of SmartCardApp.
-        if (!Files.isDirectory(appsFolder)) {
-            fail("# Tip: create " + appsFolder + " and place there all your app jar-s");
-        }
-
-        List<Path> jarApps = Plug.jars(appsFolder);
-        if (jarApps.size() == 0)
-            fail("Tip: put all your apdu4j JAR apps into " + appsFolder);
-
-        // Check all drop-in apps
-        jarApps.forEach(p -> {
-            if (Plug.loadPlugins(p, SmartCardApp.class).size() == 0) {
-                verbose(String.format("%s does not contain a SmartCardApp, %n\tplease upgrade or remove the app file.%n", p));
-            }
-        });
-        int maxNameLen = apps.keySet().stream().mapToInt(String::length).max().getAsInt();
-        int maxClassLen = apps.values().stream().mapToInt(e -> e.getClass().getCanonicalName().length()).max().getAsInt();
-
-        String format = String.format("%%-%ds   %%-%ds   (%%s)%%n", maxNameLen, maxClassLen);
-        String headerFormat = String.format("%%-%ds   %%-%ds   %%s%%n", maxNameLen, maxClassLen);
-        if (verbose)
-            System.out.printf(headerFormat, "# Name", "Class", "From");
-        for (Map.Entry<String, SmartCardApp> e : apps.entrySet()) {
-            System.out.printf(format, e.getKey(), e.getValue().getClass().getCanonicalName(), Plug.pluginfile(e.getValue()));
-        }
-        return 0;
-    }
-
-
-    // Note: file is actually known to be a file end with .jar, see Plug::jars
-    Optional<String> cmdname(Path p) {
-        Path fileName = p.getFileName();
-        if (fileName == null) return Optional.empty(); // To work around findbugs null check
-        String fname = fileName.toString().toLowerCase();
-        String extension = ".jar";
-        if (fname.endsWith(extension)) {
-            return Optional.of(fname.substring(0, fname.length() - extension.length()));
-        }
-        return Optional.empty();
-    }
-
-    Map<String, SmartCardApp> resolveApps() {
-        TreeMap<String, SmartCardApp> allApps = new TreeMap<>();
-        List<Path> jars = Plug.jars(appsFolder);
-        // enumerate jar-s
-        for (Path p : jars) {
-            Optional<String> jarcmd = cmdname(p);
-            List<SmartCardApp> apps = Plug.loadPlugins(p, SmartCardApp.class);
-            apps.forEach(a -> {
-                if (allApps.containsKey(a.getName()))
-                    logger.info("{} already present via  {}", a.getName(), allApps.get(a.getName()));
-                allApps.putIfAbsent(a.getName(), a);
-            });
-            // Rule 1: foo.jar in apps folder overrides getName() == foo
-            if (apps.size() == 1 && jarcmd.isPresent()) {
-                allApps.put(jarcmd.get(), apps.get(0));
-            }
-            if (apps.size() == 0) {
-                logger.info("{} is not SmartCardApp", p);
-            }
-        }
-        // Enumerate builtin apps
-        ServiceLoader<SmartCardApp> sl1 = ServiceLoader.load(SmartCardApp.class);
-        sl1.stream().forEach(a -> {
-            if (allApps.containsKey(a.get().getName())) {
-                logger.info("{} overrides builtin {}", allApps.get(a.get().getName()).getClass().getCanonicalName(), a.get().getName());
-            }
-            allApps.putIfAbsent(a.get().getName(), a.get());
-        });
-
-        return allApps;
-    }
-
-    @Command(name = "run", description = "Run specified smart card application")
-    public int runApp(@Parameters(paramLabel = "<app>", index = "0") String app, @Parameters(index = "1..*") String[] args) {
-        if (args == null)
-            args = new String[0];
-
-        if (apps == null)
-            apps = resolveApps();
-
-        try {
-            // Resolve reader
-            Optional<CardTerminal> rdr = getTheTerminal();
-
-            rdr.ifPresent((t) -> verbose("Using " + t.getName()));
-
-            if (rdr.isEmpty()) {
-                return fail("Specify valid reader to use with -r");
-            }
-
-            // Resolve app
-            List<Map.Entry<String, SmartCardApp>> matches = apps.entrySet().stream().filter(e -> e.getKey().equals(app)).collect(Collectors.toList());
-            if (matches.size() == 0)
-                matches = apps.entrySet().stream().filter(e -> e.getKey().startsWith(app)).collect(Collectors.toList());
-
-            if (matches.size() == 0) {
-                fail("App not found: " + app);
-                return 66;
-            } else if (matches.size() > 1) {
-                matches.forEach(e -> System.err.println("   - " + e.getKey()));
-                return fail("Multiple choices for " + app);
-            } else {
-                SmartCardApp sca = matches.get(0).getValue();
-                verbose(String.format("Running %s (%s) from %s", sca.getName(), sca.getClass().getCanonicalName(), Plug.pluginfile(sca)));
-                if (sca instanceof SimpleSmartCardApp) {
-                    CardTerminal reader = rdr.get();
-                    if (!reader.isCardPresent() && !noWait) {
-                        System.out.println("# Waiting for card in " + reader.getName());
-                        CardTerminalAppRunner.waitForCard(reader);
-                    }
-                    BIBO b = new BlockingBIBO(CardBIBO.wrap(reader.connect(getProtocol())));
-                    // This allows to send "initialization" APDU-s before an app
-                    if (apdus != null) {
-                        for (byte[] s : apdus) {
-                            ResponseAPDU r = new ResponseAPDU(b.transceive(s));
-                            if (r.getSW() != 0x9000 && !force) {
-                                return fail("Card returned " + String.format("%04X", r.getSW()) + ", exiting!");
-                            }
-                        }
-                    }
-                    Optional<Thread> exiter = exiter();
-                    // Then run the app
-                    int ret = ((SimpleSmartCardApp) sca).run(b, args);
-                    exiter.map(t -> Runtime.getRuntime().removeShutdownHook(t));
-                    b.close(); // Close the bibo if app was successful and did not do it itself.
-                    return ret;
-                } else if (sca instanceof SmartCardAppListener) {
-                    Optional<Thread> exiter = exiter();
-                    ErrorReportingSmartCardAppProxy proxy = new ErrorReportingSmartCardAppProxy((SmartCardAppListener) sca);
-                    Thread appThread = new Thread(new CardTerminalAppRunner(getTheTerminal()::get, proxy, ForkJoinPool.commonPool(), args));
-                    appThread.start();
-                    appThread.join();
-                    exiter.map(t -> Runtime.getRuntime().removeShutdownHook(t));
-                    if (proxy.didError()) {
-                        verbose("Failed");
-                        return 1;
-                    } else {
-                        verbose("Success");
-                        return 0;
-                    }
-                } else
-                    return fail("Don't know how to handle apps of type " + Arrays.asList(sca.getClass().getInterfaces()));
-            }
-        } catch (CardException | Smartcardio.EstablishContextException | InterruptedException e) {
-            System.err.println("Failed: " + SCard.getExceptionMessage(e));
-        } catch (RuntimeException e) {
-            System.err.println("App failed: " + e.getMessage());
-        }
-        return 66;
-    }
-
-    static class ErrorReportingSmartCardAppProxy implements SmartCardAppListener {
-        final SmartCardAppListener proxied;
-        private volatile Throwable errored;
-
-        ErrorReportingSmartCardAppProxy(SmartCardAppListener app) {
-            proxied = app;
-        }
-
-        @Override
-        public String getName() {
-            return proxied.getName();
-        }
-
-        @Override
-        public Optional<String> getDescription() {
-            return proxied.getDescription();
-        }
-
-        @Override
-        public CompletableFuture<AppParameters> onStart(String[] argv) {
-            return proxied.onStart(argv);
-        }
-
-        @Override
-        public void onCardPresent(AsynchronousBIBO transport, CardData properties) {
-            proxied.onCardPresent(transport, properties);
-        }
-
-        @Override
-        public void onCardRemoved() {
-            proxied.onCardRemoved();
-        }
-
-        @Override
-        public void onError(Throwable e) {
-            errored = e;
-            proxied.onError(e);
-        }
-
-        public boolean didError() {
-            return errored != null;
-        }
-    }
-
-
-    Optional<Thread> exiter() {
-        if (verbose) {
-            Thread t = new Thread(() -> System.out.printf("%n%nYou were using apdu4j. Cool!%n"));
-            Runtime.getRuntime().addShutdownHook(t);
-            return Optional.of(t);
-        }
-        return Optional.empty();
-    }
-
     @Command(name = "apdu", description = "Send raw APDU-s (Bytes Out)")
     public int sendAPDU(@Parameters(paramLabel = "<hex>", arity = "1..*") List<byte[]> apdus) {
-        // Prepend the -a ones
-        List<byte[]> toCard = new ArrayList<>(Arrays.asList(this.apdus));
-        // Then explicit apdu-s
+        var toCard = new ArrayList<byte[]>(Arrays.asList(this.apdus));
         toCard.addAll(apdus);
-        try (BIBO b = getBIBO(getTheTerminal())) {
-            for (byte[] s : toCard) {
-                ResponseAPDU r = new ResponseAPDU(b.transceive(s));
-                if (r.getSW() != 0x9000 && !force) {
-                    return fail("Card returned " + String.format("%04X", r.getSW()) + ", exiting!");
-                }
+        try {
+            var sel = selector();
+            if (proto.t0) {
+                sel = sel.protocol("T=0");
+            } else if (proto.t1) {
+                sel = sel.protocol("T=1");
             }
-        } catch (CardException e) {
-            return fail("Could not connect: " + e.getMessage());
+            if (lowlevel.exclusive) {
+                sel = sel.exclusive();
+            }
+            if (bareBibo) {
+                sel = sel.with(Readers.TRANSPARENT, true);
+            }
+            var finalSel = sel;
+            return noWait
+                    ? finalSel.run(bibo -> sendAll(bibo, toCard))
+                    : finalSel.whenReady(bibo -> sendAll(bibo, toCard));
         } catch (BIBOException e) {
-            return fail("Failed: " + e.getMessage());
+            return fail(e.getMessage());
+        }
+    }
+
+    private int sendAll(APDUBIBO bibo, List<byte[]> apdus) {
+        for (byte[] s : apdus) {
+            var r = new ResponseAPDU(bibo.transceive(s));
+            if (r.getSW() != 0x9000 && !force) {
+                return fail("Card returned %04X, exiting!".formatted(r.getSW()));
+            }
         }
         return 0;
     }
-
 
     @Command(name = "plugins", description = "List available plugins.")
     public int listPlugins() {
@@ -422,12 +220,95 @@ public class SCTool implements Callable<Integer>, IVersionProvider {
         System.out.println("Existing TerminalFactory providers:");
         if (providers != null) {
             for (Provider p : providers) {
-                System.out.printf("%s v%s (%s) from %s%n", p.getName(), p.getVersionStr(), p.getInfo(), Plug.pluginfile(p));
+                System.out.printf("%s v%s (%s) from %s%n", p.getName(), p.getVersionStr(), p.getInfo(), pluginfile(p));
             }
         }
         return 0;
     }
 
+    // Bridge CLI options (-r, -d, -R) and env vars to the fluent Readers API
+    private ReaderSelector selector() {
+        var mgr = getTerminalManager();
+        if (forceReaderSelection) {
+            try {
+                var chosen = FancyChooser.forTerminals(mgr,
+                        reader != null ? reader : System.getenv(ENV_APDU4J_READER),
+                        Readers.parseIgnoreHints(System.getenv(ENV_APDU4J_READER_IGNORE))).call();
+                if (chosen.isEmpty()) {
+                    exit("No reader selected");
+                }
+                var s = Readers.select(mgr, chosen.get().getName());
+                return debug ? s.log(System.out) : s;
+            } catch (Exception e) {
+                throw new RuntimeException("Reader selection failed", e);
+            }
+        }
+        var s = Readers.fromEnvironment(mgr, ENV_APDU4J_READER, ENV_APDU4J_READER_IGNORE);
+        if (reader != null) {
+            s = s.select(reader);
+        }
+        if (debug) {
+            s = s.log(System.out);
+        }
+        return s;
+    }
+
+    @Command(name = "uid", description = "Read card UID from each tap, fall back to ATR")
+    public int uid() {
+        var counter = new AtomicInteger();
+        var exiter = new Thread(() -> System.out.printf("%n%nYou tapped %d cards. Cool!%n", counter.get()));
+        Runtime.getRuntime().addShutdownHook(exiter);
+        selector().fresh(true).onCard((reader, bibo) -> {
+            var n = counter.incrementAndGet();
+            try {
+                var uid = new SousChef(bibo).cook(Cookbook.uid());
+                System.out.printf("%d: %s UID: %s%n", n, reader.name(), HexUtils.bin2hex(uid));
+            } catch (SpoiledIngredient e) {
+                var atr = reader.getATR().map(HexUtils::bin2hex).orElse("no ATR");
+                System.out.printf("%d: %s ATR: %s%n", n, reader.name(), atr);
+            }
+        });
+        try {
+            Thread.sleep(Long.MAX_VALUE);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+        }
+        return 0;
+    }
+
+    @Command(name = "atr", description = "Read card ATR via DIRECT protocol (no card reset)")
+    public int atr() {
+        try {
+            var card = selector().protocol("DIRECT").card();
+            try {
+                System.out.println(HexUtils.bin2hex(card.getATR().getBytes()));
+            } finally {
+                card.disconnect(false);
+            }
+            return 0;
+        } catch (BIBOException | CardException e) {
+            return fail(e.getMessage());
+        }
+    }
+
+    @Command(name = "cplc", description = "Read GlobalPlatform CPLC data")
+    public int cplc() {
+        var recipe = ToolCookbook.selectOpen()
+                .and(ToolCookbook.cplc())
+                .map(CPLC::fromBytes);
+        try {
+            var sel = selector();
+            var cplc = noWait
+                    ? sel.run(bibo -> new SousChef(bibo).cook(recipe))
+                    : sel.whenReady(bibo -> new SousChef(bibo).cook(recipe));
+            System.out.println(cplc.toPrettyString());
+            return 0;
+        } catch (SpoiledIngredient e) {
+            return fail("Card error: " + e.getMessage());
+        } catch (BIBOException e) {
+            return fail(e.getMessage());
+        }
+    }
 
     static void configureLogging() {
         // Set up slf4j simple in a way that pleases us
@@ -438,8 +319,9 @@ public class SCTool implements Callable<Integer>, IVersionProvider {
         System.setProperty("org.slf4j.simpleLogger.showDateTime", "true");
         System.setProperty("org.slf4j.simpleLogger.dateTimeFormat", "HH:mm:ss:SSS");
 
-        if (System.getenv(ENV_APDU4J_DEBUG) != null)
+        if (System.getenv(ENV_APDU4J_DEBUG) != null) {
             System.setProperty("org.slf4j.simpleLogger.logFile", System.getenv().getOrDefault(ENV_APDU4J_DEBUG_FILE, "apdu4j.log"));
+        }
         // Default level
         System.setProperty("org.slf4j.simpleLogger.defaultLogLevel", System.getenv().getOrDefault(ENV_APDU4J_DEBUG, "warn"));
     }
@@ -450,8 +332,8 @@ public class SCTool implements Callable<Integer>, IVersionProvider {
             configureLogging();
 
             // Parse CLI
-            SCTool tool = new SCTool();
-            CommandLine cli = new CommandLine(tool);
+            var tool = new SCTool();
+            var cli = new CommandLine(tool);
 
             // To support "sc gp -ldv"
             cli.setUnmatchedOptionsArePositionalParams(true);
@@ -473,32 +355,21 @@ public class SCTool implements Callable<Integer>, IVersionProvider {
         }
     }
 
-
     @Override
     public Integer call() {
-        // Old style shorthands
-        if (list)
+        if (list) {
             return listReaders(verbose);
-        if (apdus.length > 0) {
-            return sendAPDU(Collections.emptyList()); // XXX: to support mixing -a and apdu subcommand
         }
-        // Default is to run apps
+        if (apdus.length > 0) {
+            return sendAPDU(Collections.emptyList());
+        }
         if (params.length > 0) {
-            // app can't start with "-", so it is an unknown/unhandled parameter
             if (params[0].startsWith("-")) {
                 System.err.println("Invalid parameters: " + String.join(" ", params));
                 return 1;
             }
-
-            if (apps == null)
-                apps = resolveApps();
-
-            if (apps.containsKey(params[0])) {
-                return runApp(params[0], Arrays.copyOfRange(params, 1, params.length));
-            } else {
-                System.err.println("Unknown app: " + params[0]);
-                return 66;
-            }
+            System.err.println("Unknown parameter: " + params[0]);
+            return 66;
         }
         System.out.println("Nothing to do!");
         return 0;
@@ -511,18 +382,19 @@ public class SCTool implements Callable<Integer>, IVersionProvider {
         return Optional.empty();
     }
 
-
     // Return a terminal factory manager, taking into account CLI options
     TerminalManager getTerminalManager() {
         TerminalFactory tf;
-        if (manager != null)
+        if (manager != null) {
             return manager;
+        }
         // Separate trycatch block for potential Windows exception in terminal listing
         try {
             if (lowlevel.useSUN != null) {
                 // Fix (SunPCSC) properties on non-windows platforms
-                if (TerminalManager.isEnabled("apdu4j.fixpath", true))
+                if (TerminalManager.isEnabled("apdu4j.fixpath", true)) {
                     TerminalManager.fixPlatformPaths();
+                }
 
                 // Override PC/SC library path (Only applies to SunPCSC)
                 forceLibraryPath().ifPresent(e -> System.setProperty(TerminalManager.LIB_PROP, e));
@@ -531,8 +403,12 @@ public class SCTool implements Callable<Integer>, IVersionProvider {
                 if (verbose && System.getProperty(TerminalManager.LIB_PROP) != null) {
                     System.out.println("# " + TerminalManager.LIB_PROP + "=" + System.getProperty(TerminalManager.LIB_PROP));
                 }
-                // Get the built-int provider
+                // Get the built-in provider
                 tf = TerminalFactory.getDefault();
+                if (TerminalManager.isNoneProvider(tf)) {
+                    fail("PC/SC is not available via SunPCSC. Install pcsc-lite or check smart card service.");
+                    return null;
+                }
             } else {
                 // Get JNA or default
                 tf = TerminalManager.getTerminalFactory();
@@ -546,116 +422,38 @@ public class SCTool implements Callable<Integer>, IVersionProvider {
         } catch (Smartcardio.EstablishContextException e) {
             String msg = SCard.getExceptionMessage(e);
             fail("No readers: " + msg);
-            return null; // FIXME sugar.
+            return null;
+        } catch (IllegalStateException e) {
+            fail(e.getMessage());
+            return null;
         }
     }
 
-    private String getProtocol() {
-        String protocol;
-        if (proto.t0) {
-            protocol = "T=0";
-        } else if (proto.t1) {
-            protocol = "T=1";
-        } else {
-            protocol = "*";
-        }
-
-        // JNA-proprietary
-        if (lowlevel.useSUN == null) {
-            // Windows 8+ have the "5 seconds of transaction" limit. Because we want reliability
-            // and don't have access to arbitrary SCard* calls via javax.smartcardio, we rely on
-            // JNA interface and its EXCLUSIVE access instead and do NOT use the SCardBeginTransaction
-            // capability of the JNA interface.
-            // https://msdn.microsoft.com/en-us/library/windows/desktop/aa379469%28v=vs.85%29.aspx
-            if (System.getProperty("os.name").toLowerCase().contains("windows") || lowlevel.exclusive)
-                protocol = "EXCLUSIVE;" + protocol;
-        }
-        return protocol;
-    }
-
-    // Return a BIBO or fail
-    private BIBO getBIBO(Optional<CardTerminal> rdr) throws CardException {
-        if (rdr.isEmpty()) {
-            exit("Specify valid reader to use with -r");
-        } else {
-            logger.info("Using " + rdr.get());
-        }
-        CardTerminal reader = rdr.get();
-        if (!noWait && !reader.isCardPresent()) {
-            verbose("Waiting for card ...");
-            try {
-                CardTerminalAppRunner.waitForCard(reader);
-            } catch (InterruptedException e) {
-                verbose("Interrupted!");
-            }
-        }
-        Card c = reader.connect(getProtocol());
-        final AsynchronousBIBO bibo;
-        if (bareBibo) {
-            bibo = CardBIBO.wrap(c);
-        } else {
-            bibo = GetResponseWrapper.wrap(CardBIBO.wrap(c));
-        }
-        // XXX: this is ugly, sync->async->sync
-        return new BlockingBIBO(bibo);
-    }
-
-    // Return a terminal TODO: handle plugins
-    private Optional<CardTerminal> getTheTerminal() {
-        String spec = reader == null ? System.getenv(ENV_APDU4J_READER) : reader;
-
-        // Don't issue APDU-s internally
-        if (bareBibo) {
-            System.setProperty("sun.security.smartcardio.t0GetResponse", "false");
-            System.setProperty("sun.security.smartcardio.t1GetResponse", "false");
-            System.setProperty("jnasmartcardio.transparent", "true");
-        }
-
-        try {
-            // Get the right factory, based on command line options
-            getTerminalManager();
-
-            Optional<CardTerminal> result;
-            if (forceReaderSelection) {
-                result = FancyChooser.forTerminals(manager, System.getenv(ENV_APDU4J_READER), System.getenv(ENV_APDU4J_READER_IGNORE)).call();
-            } else {
-                CardTerminals terminals = manager.terminals();
-                List<PCSCReader> readers = TerminalManager.listPCSC(terminals.list(), null, false);
-                TerminalManager.dwimify(readers, spec, System.getenv(ENV_APDU4J_READER_IGNORE));
-                if (spec != null) {
-                    Optional<PCSCReader> preferred = TerminalManager.toSingleton(readers, e -> e.isPreferred());
-                    if (preferred.isPresent()) {
-                        result = Optional.ofNullable(terminals.getTerminal(preferred.get().getName()));
-                    } else {
-                        System.err.println("-r/$APDU4J_READER was not found: " + spec);
-                        result = Optional.empty();
-                    }
-                } else {
-                    result = TerminalManager.getLucky(readers, terminals);
-                }
-                if (result.isEmpty() && spec == null) {
-                    result = FancyChooser.forTerminals(manager, null, System.getenv(ENV_APDU4J_READER_IGNORE)).call();
-                }
-            }
-            // Apply logging, if requested XXX: does not apply to app listener in other thread.
-            return result.map(t -> debug ? LoggingCardTerminal.getInstance(t) : t);
-        } catch (Exception e) {
-            System.out.println("Failed : " + e.getMessage());
-            return Optional.empty();
-        }
-    }
-
+    @Override
     public String[] getVersion() {
-        String secondLine = String.format("# Running on %s %s %s", System.getProperty("os.name"), System.getProperty("os.version"), System.getProperty("os.arch"))
-                + String.format(", Java %s by %s", System.getProperty("java.version"), System.getProperty("java.vendor"));
+        var secondLine = "# Running on %s %s %s".formatted(System.getProperty("os.name"), System.getProperty("os.version"), System.getProperty("os.arch"))
+                + ", Java %s by %s".formatted(System.getProperty("java.version"), System.getProperty("java.vendor"));
 
-        ArrayList<String> v = new ArrayList<>();
+        var v = new ArrayList<String>();
         v.add(TerminalManager.getVersion());
         v.add(secondLine);
-        List<String> env = System.getenv().entrySet().stream().filter(e -> e.getKey().startsWith("APDU4J_")).map(e -> String.format("%s=\"%s\"", e.getKey(), e.getValue())).collect(Collectors.toList());
-        if (env.size() > 0)
+        List<String> env = System.getenv().entrySet().stream().filter(e -> e.getKey().startsWith("APDU4J_")).map(e -> "%s=\"%s\"".formatted(e.getKey(), e.getValue())).toList();
+        if (!env.isEmpty()) {
             v.add("# " + String.join(" ", env));
+        }
         return v.toArray(new String[0]);
+    }
+
+    private static String pluginfile(Object o) {
+        var src = o.getClass().getProtectionDomain().getCodeSource();
+        if (src == null) {
+            return "builtin";
+        }
+        var url = src.getLocation();
+        if ("file".equals(url.getProtocol())) {
+            return url.getFile();
+        }
+        return url.toExternalForm();
     }
 
     private static int fail(String message) {
